[package]
name = "axum-course"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
axum = { version = "0.6", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"

[dev-dependencies]
anyhow = "1.0"
httpc-test = "0.1"
